crates/sotf-plugins/tests/snapshots/render_plan_snapshots__downmix__downmix__desktop_600.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "downmix",
  "width": 600.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "sm",
  "group_direction": "row",
  "slider_height": 120.0,
  "show_visualizations": false,
  "columns_visible": [
    "config",
    "main"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "CHANNEL GAINS"
  ],
  "overflow_group_ids": [],
  "config_controls": [
    {
      "param_index": 4,
      "param_name": "Phase Coherence",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false,
      "enabled": true
    }
  ],
  "main_groups": [
    {
      "id": "CHANNEL GAINS",
      "title": "CHANNEL GAINS",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Center Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -12.0,
            0.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 1,
          "param_name": "Surround Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -12.0,
            0.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 2,
          "param_name": "Height Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -60.0,
            0.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 3,
          "param_name": "LFE Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -60.0,
            0.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 7,
          "param_name": "ITU-R BS.775 Mode",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 8,
          "param_name": "Matrix Lt/Rt",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [
    {
      "name": "Phase",
      "controls": [
        {
          "param_index": 5,
          "param_name": "Phase Blend Low",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            100.0,
            1000.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 6,
          "param_name": "Phase Blend High",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            1000.0,
            5000.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "viz_slots": [],
  "dynamic_sections": []
}
